# Suite-3-Performance-Testing

./: .env.example  .env.from.axel  .env.from.very.first.working.5min.run  .gitattributes  .gitignore  0010-EXPLAIN-PLANS.md  0010_Create_Insert_References_Procedure-BETTER-CTE-1.sql  0010_Create_Insert_References_Procedure-BETTER-CTE-2.sql  0010_Create_Insert_References_Procedure-CTE-ONLY-v2.sql  0010_Create_Insert_References_Procedure-CTE-ONLY.sql  0010_Create_Insert_References_Procedure-SINGLE-STATEMENT-1.sql  0010_Create_Insert_References_Procedure-SINGLE-STATEMENT-CTE-1.sql  2025-11-03-01-34-MICRO-BATCHER.md  2025-11-03-09-23-MICRO-BATCHER-pessimistic.md  BATCH-API-INITIAL-DESIGN.md  BATCH-VOLUME-TEST-DESIGN.md  BATCH-VOLUME-TEST-IMPLEMENTATION-PLAN.md  Brad-Example-Prompts.md  Brad-Findings-Snippet.md  CONTRIBUTORS.md  EXPLAIN-DELETE.md  FINDINGS.md  INSERT_REFERENCES_PLAN.md  JSONB-PARTIAL-UPDATE-INITIAL-DESIGN.md  METRICS_EXTRACTION_GUIDE.md  NOTICES.md  README.md  RUNNING_VOLUME_TESTS.md  SECURITY.md  TUNING-REPORT.md  TestRunner.ps1  TestRunner.psm1  change_query_tests.py  deploy.env  deploy.ps1  extract-metrics.js  findings-summary-10-30-10-22.md  locust-config.json  notes-from-2025-11-13-meeting-with-vinaya.md  package.ps1  (+8 more)
src/: README.md  pyproject.toml
src/bulk-load/: .gitignore  Invoke-LoadGrandBend.ps1  Invoke-LoadSouthridge.ps1  README.MD
src/bulk-load/modules/: BulkLoad.psm1  Package-Management.psm1
src/bulkLoad/: Invoke-LoadGrandBend.ps1  Invoke-LoadSouthridge.ps1
src/bulkLoad/modules/: BulkLoad.psm1
src/edfi-paging-test/: .coveragerc  .env.example  .gitignore  .mypy.ini  README.md  env.ps1  pyproject.toml
src/edfi-paging-test/edfi_paging_test/: .env.example  __main__.py  main.py  performance_tester.py  reporting.py
src/edfi-paging-test/edfi_paging_test/api/: api_info.py  api_version_info.py  paginated_result.py  request_client.py
src/edfi-paging-test/edfi_paging_test/helpers/: api_metadata.py  argparser.py  case_insensitive_enum.py  log_level.py  main_arguments.py  measurement.py  output_format.py  request_logger.py  resource_entries_cache.py  test_type.py
src/edfi-paging-test/edfi_paging_test/reporter/: filtered_read_measurement.py  filtered_read_request_logger.py  measurement.py  paging_measurement.py  paging_request_logger.py  reporter.py  request_logger.py  summary.py
src/edfi-paging-test/tests/: test_Measurement.py  test_argparser.py
src/edfi-paging-test/tests/api/: test_paginated_result.py  test_request_client.py
src/edfi-paging-test/tests/helpers/: test_OutputFormat.py  test_api_metadata.py  test_argparser.py  test_measurement.py  test_request_logger.py
src/edfi-paging-test/tests/helpers/api_metadata/: base_api_metadata.json  metadata.http  openapi_metadata.json  resource_metadata.json
src/edfi-paging-test/tests/reporter/: test_measurement.py  test_reporter.py  test_request_logger.py  test_summary.py
src/edfi-performance-test/: .coveragerc  .flake8  .mypy.ini  README.md  mypy-junit.xml  pyproject.toml  pytest-junit.xml
src/edfi-performance-test/edfi_performance_test/: .env.example  __main__.py  manual_student_batch_integration.py  manual_student_double_create_batch.py  performance_tester.py
src/edfi-performance-test/edfi_performance_test/api/basic_client/: __init__.py  ed_fi_basic_api_client.py
src/edfi-performance-test/edfi_performance_test/api/client/: __init__.py  academic_week.py  account.py  accountability.py  assessment.py  cohort.py  (+35 more)
src/edfi-performance-test/edfi_performance_test/config/: config.py
src/edfi-performance-test/edfi_performance_test/factories/: mixins.py  utils.py
src/edfi-performance-test/edfi_performance_test/helpers/: api_metadata.py  argparser.py  case_insensitive_enum.py  config.py  config_version.py  locustfile.py  log_level.py  main_arguments.py  module_helper.py  perf_suite_error.py  test_type.py
src/edfi-performance-test/edfi_performance_test/tasks/: __init__.py  ed_fi_task_set.py
src/edfi-performance-test/tests/: test_argparser.py  test_batch_api_client.py  test_student_batch_volume_natural_key.py
src/edfi-performance-test/tests/factories/: test_utils.py
src/edfi-query-test/: .coveragerc  .mypy.ini  README.md  pyproject.toml
src/edfi-query-test/edfi_query_test/: __main__.py  performance_tester.py
src/edfi-query-test/edfi_query_test/api/: api_info.py  paginated_result.py  request_client.py
src/edfi-query-test/edfi_query_test/helpers/: api_metadata.py  argparser.py  case_insensitive_enum.py  log_level.py  main_arguments.py  output_format.py  query_param.py
src/edfi-query-test/edfi_query_test/reporter/: measurement.py  reporter.py  request_logger.py  summary.py
src/edfi-query-test/tests/: test_performance_tester.py
src/edfi-query-test/tests/api/: __init__.py  test_request_client.py
src/edfi-query-test/tests/helpers/: test_api_metadata.py  test_argparser.py  test_query_param.py
src/perf-test-analyis/: .env.example  .mypy.ini  Pipeclean Test Analysis.ipynb  Volume Test Analysis TC.ipynb  Volume Test Analysis.ipynb  pyproject.toml
src/perf-test-analyis/edfi_perf_test_analysis/: analysis_helpers.py  pipeclean.py  plotting.py  ui_helpers.py  volume.py
src/perf-test-analysis/: README.md  Volume Test Analysis.ipynb  pyproject.toml
src/perf-test-analysis/edfi_perf_test_analysis/: analysis_helpers.py  pipeclean.py  plotting.py  ui_helpers.py  volume.py
(+425 files in other folders)
