[tool.poetry]
name = "edfi-paging-test"
version = "0.1.0"
description = "Ed-Fi Data Out Test"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
ConfigArgParse = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "7.0.1"
flake8 = "^3.9.2"
mypy = "^0.931"
pytest-describe = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]