[tool.poetry]
name = "edfi-paging-test"
version = "0.1.0"
description = "Ed-Fi Data Out Test"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
ConfigArgParse = "^1.5.3"
python-dotenv = "^0.19.2"
requests-oauthlib = "^1.3.1"
requests = "^2.32.4"
urllib3 = "^2.5.0"
pandas = "^1.4.1"
errorhandler = "^2.0.1"
numpy = "1.24.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
mypy = "^0.931"
pytest-describe = "^2.0.1"
coverage = "^6.3.2"
types-oauthlib = "^3.1.6"
pytest-mock = "^3.7.0"
requests-mock = "^1.9.3"
types-requests = "^2.27.12"
data-science-types = "^0.2.23"
pyfakefs = "^4.5.5"
pook = "^1.0.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
