[tool.poetry]
name = "perf-test-analyis"
version = "0.1.0"
description = "Analysis tools for Ed-Fi performance testing kits"
authors = ["Ed-Fi Alliance, llc and contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "perf_test_analyis"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
jupyter = "^1.0.0"
ipywidgets = "^8.0.2"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
