[tool.poetry]
name = "perf-test-analysis"
version = "0.1.0"
description = "Analysis tools for Ed-Fi performance testing kits"
authors = ["Ed-Fi Alliance, llc and contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "edfi_perf_test_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^1.5.1"
jupyter = "^1.0.0"
ipywidgets = "8.0.6"
tabulate = "^0.9.0"
seaborn = "^0.12.1"
scipy = "^1.10.1"
pillow = "^10.0.1"
urllib3 = "^2.5.0"
fonttools = "4.43.0"
jinja2 = "3.1.3"
jupyter-server = "2.11.2"
numpy = "1.26.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
